# p2pfs

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  reference.md
examples/cli-client/peer1/: config.json
examples/cli-client/peer2/: client-cli.py  config.json
examples/cli-client/peer3/: config.json
p2pfs/: __init__.py  application.py  dht.py  network.py
tests/: conftest.py  test_app.py  test_dht.py  test_indexing.py  test_network.py  test_publish.py  test_search.py
