[tool.poetry]
name = "p2pfs"
version = "0.1.0"
description = ""
authors = ["Frank Hinek <frankhinek@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mkdocs-material = "^8.5.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
