[tool.poetry]
name = "p2pfs"
version = "0.1.0"
description = "Peer-to-Peer File Transfer prototype"
authors = ["Frank Hinek <frankhinek@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kademlia = "^2.2.2"
pytest-asyncio = "^0.19.0"
tinytag = "^1.8.1"
dag-cbor = "^0.2.2"
aiohttp = "^3.8.3"
pytest-aiohttp = "^1.0.4"
aioconsole = "^0.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mkdocs-material = "^8.5.3"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
black = "^22.8.0"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:\"@coroutine\" decorator is deprecated:DeprecationWarning'
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
